--- a/src/main/resources/assets/luckytntmod/lang/en_us.json
+++ b/src/main/resources/assets/luckytntmod/lang/en_us.json
@@ -177,6 +177,9 @@
 	"block.luckytntmod.colossal_tnt" : "Colossal TNT",
 	"block.luckytntmod.structure_tnt" : "Structure TNT",
 	"block.luckytntmod.grande_finale" : "Grande Finale",
+	"block.luckytntmod.flat_earth" : "Flat Earth",
+	"block.luckytntmod.evil_tnt" : "Evil TNT",
+	"block.luckytntmod.kola_borehole_tnt" : "Kola Borehole TNT",
 	
 	"block.luckytntmod.nuclear_waste" : "Nuclear Waste",
 	"block.luckytntmod.uranium_ore" : "Uranium Ore",
@@ -512,6 +515,9 @@
 	"entity.luckytntmod.colossal_tnt" : "Colossal TNT",
 	"entity.luckytntmod.structure_tnt" : "Structure TNT",
 	"entity.luckytntmod.grande_finale" : "Grande Finale",
+	"entity.luckytntmod.flat_earth" : "Flat Earth",
+	"entity.luckytntmod.evil_tnt" : "Evil TNT",
+	"entity.luckytntmod.kola_borehole_tnt" : "Kola Borehole TNT",
 				
 	"entity.luckytntmod.dynamite" : "Dynamite",
 	"entity.luckytntmod.dynamite_x5" : "Dynamite x5",
