--- a/src/main/resources/assets/luckytntmod/lang/de_de.json
+++ b/src/main/resources/assets/luckytntmod/lang/de_de.json
@@ -182,6 +182,14 @@
 	"block.luckytntmod.kola_borehole_tnt" : "Kola Bohrloch TNT",
 	"block.luckytntmod.hydrogen_bomb" : "Wasserstoffbombe",
 	"block.luckytntmod.fluorine_tnt" : "Fluor TNT",
+	"block.luckytntmod.disintegrating_tnt" : "Aufl\u00f6sendes TNT",
+	"block.luckytntmod.flying_tnt" : "Fliegendes TNT",
+	"block.luckytntmod.heat_wave" : "Hitzewelle",
+	"block.luckytntmod.winter_tnt" : "Winter TNT",
+	"block.luckytntmod.black_hole_tnt" : "Schwarzes Loch TNT",
+	"block.luckytntmod.flak_tnt" : "Flak TNT",
+	"block.luckytntmod.tnt_rain" : "TNT-Regen",
+	"block.luckytntmod.lucky_doomsday" : "Lucky Weltuntergang",
 			
 	"block.luckytntmod.nuclear_waste" : "Atomm\u00FCll",
 	"block.luckytntmod.uranium_ore" : "Uranerz",
@@ -192,6 +200,7 @@
 	"block.luckytntmod.obsidian_powered_rail" : "Obsidian Antriebsschiene",
 	"block.luckytntmod.obsidian_activator_rail" : "Obsidian Aktivierungsschiene",
 	"block.luckytntmod.obsidian_detector_rail" : "Obsidian Sensorschiene",
+	"block.luckytntmod.toxic_stone" : "Giftiger Stein",
 
 	"item.luckytntmod.dynamite" : "Dynamit",
 	"item.luckytntmod.dynamite_x5" : "Dynamit x5",
@@ -521,6 +530,13 @@
 	"entity.luckytntmod.kola_borehole_tnt" : "Kola Bohrloch TNT",
 	"entity.luckytntmod.hydrogen_bomb" : "Wasserstoffbombe",
 	"entity.luckytntmod.fluorine_tnt" : "Fluor TNT",
+	"entity.luckytntmod.disintegrating_tnt" : "Aufl\u00f6sendes TNT",
+	"entity.luckytntmod.flying_tnt" : "Fliegendes TNT",
+	"entity.luckytntmod.heat_wave" : "Hitzewelle",
+	"entity.luckytntmod.winter_tnt" : "Winter TNT",
+	"entity.luckytntmod.black_hole_tnt" : "Schwarzes Loch TNT",
+	"entity.luckytntmod.flak_tnt" : "Flak TNT",
+	"entity.luckytntmod.tnt_rain" : "TNT-Regen",
 		
 	"entity.luckytntmod.dynamite" : "Dynamit",
 	"entity.luckytntmod.dynamite_x5" : "Dynamit x5",
@@ -669,6 +685,7 @@
 	"entity.luckytntmod.solar_eruption_projectile" : "Sonneneruption Projektil",
 	"entity.luckytntmod.vredefort_projectile" : "Vredefort Meteorit",
 	"entity.luckytntmod.hydrogen_bomb_bomb" : "Wasserstoffbombe Bombe",
+	"entity.luckytntmod.disintegrating_projectile" : "Aufl\u00f6sendes Projektil",
 	
 	"entity.luckytntmod.angry_miner" : "W\u00FCtender Minenarbeiter",
 	"entity.luckytntmod.toxic_cloud" : "Giftige Wolke",
