--- a/src/main/resources/assets/luckytntmod/lang/en_us.json
+++ b/src/main/resources/assets/luckytntmod/lang/en_us.json
@@ -182,6 +182,14 @@
 	"block.luckytntmod.kola_borehole_tnt" : "Kola Borehole TNT",
 	"block.luckytntmod.hydrogen_bomb" : "Hydrogen Bomb",
 	"block.luckytntmod.fluorine_tnt" : "Fluorine TNT",
+	"block.luckytntmod.disintegrating_tnt" : "Disintegrating TNT",
+	"block.luckytntmod.flying_tnt" : "Flying TNT",
+	"block.luckytntmod.heat_wave" : "Heat Wave",
+	"block.luckytntmod.winter_tnt" : "Winter TNT",
+	"block.luckytntmod.black_hole_tnt" : "Black Hole TNT",
+	"block.luckytntmod.flak_tnt" : "Flak TNT",
+	"block.luckytntmod.tnt_rain" : "TNT Rain",
+	"block.luckytntmod.lucky_doomsday" : "Lucky Doomsday",
 	
 	"block.luckytntmod.nuclear_waste" : "Nuclear Waste",
 	"block.luckytntmod.uranium_ore" : "Uranium Ore",
@@ -192,6 +200,7 @@
 	"block.luckytntmod.obsidian_powered_rail" : "Obsidian Powered Rail",
 	"block.luckytntmod.obsidian_activator_rail" : "Obsidian Activator Rail",
 	"block.luckytntmod.obsidian_detector_rail" : "Obsidian Detector Rail",
+	"block.luckytntmod.toxic_stone" : "Toxic Stone",
 
 	"item.luckytntmod.dynamite" : "Dynamite",
 	"item.luckytntmod.dynamite_x5" : "Dynamite x5",
@@ -522,6 +531,13 @@
 	"entity.luckytntmod.kola_borehole_tnt" : "Kola Borehole TNT",
 	"entity.luckytntmod.hydrogen_bomb" : "Hydrogen Bomb",
 	"entity.luckytntmod.fluorine_tnt" : "Fluorine TNT",
+	"entity.luckytntmod.disintegrating_tnt" : "Disintegrating TNT",
+	"entity.luckytntmod.flying_tnt" : "Flying TNT",
+	"entity.luckytntmod.heat_wave" : "Heat Wave",
+	"entity.luckytntmod.winter_tnt" : "Winter TNT",
+	"entity.luckytntmod.black_hole_tnt" : "Black Hole TNT",
+	"entity.luckytntmod.flak_tnt" : "Flak TNT",
+	"entity.luckytntmod.tnt_rain" : "TNT Rain",
 				
 	"entity.luckytntmod.dynamite" : "Dynamite",
 	"entity.luckytntmod.dynamite_x5" : "Dynamite x5",
@@ -669,6 +685,7 @@
 	"entity.luckytntmod.solar_eruption_projectile" : "Solar Eruption Projectile",
 	"entity.luckytntmod.vredefort_projectile" : "Vredefort Meteor",
 	"entity.luckytntmod.hydrogen_bomb_bomb" : "Hydrogen Bomb Bomb",
+	"entity.luckytntmod.disintegrating_projectile" : "Disintegrating Projectile",
 
 	"entity.luckytntmod.angry_miner" : "Angry Miner",
 	"entity.luckytntmod.toxic_cloud" : "Toxic Cloud",
