--- a/src/main/resources/assets/luckytntmod/lang/de_de.json
+++ b/src/main/resources/assets/luckytntmod/lang/de_de.json
@@ -340,11 +340,15 @@
 	"item.luckytntmod.death_ray_ray" : "Todesstrahl-Strahl",
 	"item.luckytntmod.vacuum_cleaner" : "Staubsauger",
 	
-	"item.floating_island.info" : "\u00A77\u00A7o\u00c4ndere die H\u00f6he der Insel indem du die Konfiguration bearbeitest! Auf einem Server wirst du auch die Server-Konfiguration \u00e4ndern m\u00fcssen!",	
-	"item.smoke_tnt.info" : "\u00A77\u00A7o\u00c4ndere die Farbe des Rauchs indem du mit roter, gr\u00fcner, blauer, wei\u00dfer oder schwarzer Farbe darauf rechts-klickst!", 	
+	"item.floating_island.info" : "\u00A77\u00A7o\u00c4ndere die H\u00f6he der Insel indem du die Konfiguration bearbeitest! Auf einem Server wirst du auch die Server-Konfiguration bearbeiten m\u00fcssen!",	
+	"item.smoke_tnt.info" : "\u00A77\u00A7o\u00c4ndere die Farbe des Rauchs indem du mit roter, gr\u00fcner, blauer, wei\u00dfer oder schwarzer Farbe darauf rechtsklickst!", 	
  	"item.configuration_wand.info": "\u00A77\u00A7oRechtklicke mit diesem Stab bestimmte TNTs, um deren Konfiguration zu \u00e4ndern!",
-   	"item.gotthard_tunnel.info": "\u00A77\u00A7o\u00c4ndere, dass das TNT auch Stra\u00dfen generiert, indem du mit dem Konfigurierungs-Stab auf den Block rechts-klickst!",
-	"item.antimatter.info": "\u00A77\u00A7oKann erstellt werden, wenn Uranerz von einem Todesstrahl-Strahl zerst\u00f6rt wurde!",
+   	"item.gotthard_tunnel.info": "\u00A77\u00A7o\u00c4ndere, dass das TNT auch Stra\u00dfen generiert, indem du mit dem Konfigurierungs-Stab auf den Block rechtsklickst!",
+ 	"item.entity.firework.info" : "\u00A77\u00A7oDer diesem TNT n\u00e4heste NPC wird f\u00fcr das Feuerwerk verwendet!",
+ 	"item.item.firework.info" : "\u00A77\u00A7oRechtsklicke dieses TNT mit einem Item in der Hand, um dieses f\u00fcr das Feuerwerk zu verwenden!",
+ 	"item.custom_tnt.info" : "\u00A77\u00A7o\u00c4ndere die Effekte des TNT indem du die Konfiguration bearbeitest! Auf einem Server wirst du auch die Server-Konfiguration bearbeiten m\u00fcssen!",
+ 	"item.custom_firework.info" : "\u00A77\u00A7oDer Block unter diesem TNT wird f\u00fcr das Feuerwerk verwendet!",
+ 	"item.antimatter.info": "\u00A77\u00A7oKann erstellt werden, wenn Uranerz von einem Todesstrahl-Strahl zerst\u00f6rt wurde!",
 	"item.obsidian_rails.info": "\u00A77\u00A7oObsidian Schienen haben eine Menge Explosionsresistenz! TNT-Loren, die auf ihnen explodieren verursachen keinen Block-Schaden!",
 	"item.vacuum_cleaner.info" : "\u00A77\u00A7oBenutze den Staubsauger um die nervigen Giftigen Wolken los zu werden",
 	
