--- a/src/main/resources/assets/luckytntmod/lang/en_us.json
+++ b/src/main/resources/assets/luckytntmod/lang/en_us.json
@@ -340,15 +340,19 @@
 	"item.luckytntmod.death_ray_ray" : "Death Ray Ray",
 	"item.luckytntmod.vacuum_cleaner" : "Vacuum Cleaner",
   
-	"item.floating_island.info" : "\u00A77\u00A7oChange the height of the island by adjusting the config file! On a server you will also have to adjust the server-config file!",	
-	"item.smoke_tnt.info" : "\u00A77\u00A7oChange the color of the smoke by right-clicking the TNT with red, green, blue, white or black dye!",
-   	"item.gotthard_tunnel.info": "\u00A77\u00A7oChange wether this TNT generates streets too by right-clicking the Block with the Configuration Wand!",
+	"item.floating_island.info" : "\u00A77\u00A7oChange the height of the island by adjusting the config file! On a server you will also have to adjust the server config file!",	
+	"item.smoke_tnt.info" : "\u00A77\u00A7oChange the color of the smoke by rightclicking the TNT with red, green, blue, white or black dye!",
+   	"item.gotthard_tunnel.info" : "\u00A77\u00A7oChange wether this TNT generates streets too by right-clicking the Block with the Configuration Wand!",
+ 	"item.entity.firework.info" : "\u00A77\u00A7oThe closest non-player entity to the TNT is chosen for the firework!",
+ 	"item.item.firework.info" : "\u00A77\u00A7oRightclick this TNT with an item to use it in the firework!",
+ 	"item.custom_tnt.info" : "\u00A77\u00A7oChange the effects of this TNT by adjusting them in the config file! On a server you will also have to adjust the server config file!",
+ 	"item.custom_firework.info" : "\u00A77\u00A7oThe block below this TNT is chosen for the firework!",
  	"item.configuration_wand.info": "\u00A77\u00A7oRight-click with this Wand on specific TNTs to change their Configuration!",
-	"item.antimatter.info": "\u00A77\u00A7oMay be created when Uranium Ore is destroyed by a Death Ray Ray!",
+	"item.antimatter.info" : "\u00A77\u00A7oMay be created when Uranium Ore is destroyed by a Death Ray Ray!",
 	"item.obsidian_rail.info" : "\u00A77\u00A7oObsidian Rails have a lot of Explosion Resistance! Minecarts exploding on them will not deal block damage!",
 	"item.vacuum_cleaner.info" : "\u00A77\u00A7oUse the Vacuum Cleaner to get rid of those pesky Toxic Clouds!",
 	
-	"item.grande_finale.info": "\u00A77\u00A7o*Community TNT* Thank you for 100.000 downloads!",
+	"item.grande_finale.info" : "\u00A77\u00A7o*Community TNT* Thank you for 100.000 downloads!",
 	
 	"entity.luckytntmod.tnt" : "TNT",
 	"entity.luckytntmod.tnt_x5" : "TNT x5",
