--- a/src/main/resources/assets/luckytntmod/lang/ru_ru.json
+++ b/src/main/resources/assets/luckytntmod/lang/ru_ru.json
@@ -51,7 +51,7 @@
 	"block.luckytntmod.walking_tnt" : "Ходячий Динамит",
 	"block.luckytntmod.wool_tnt" : "Шерстяной Динамит",
 	"block.luckytntmod.say_goodbye" : "Скажи Прощай",
-        "block.luckytntmod.angry_miners" : "Злые Шахтеры",
+    "block.luckytntmod.angry_miners" : "Злые Шахтеры",
 	"block.luckytntmod.withering_tnt" : "Иссушающий Динамит",
 	"block.luckytntmod.nuclear_waste_tnt" : "Динамит С Ядерными Отходами",
 	"block.luckytntmod.static_tnt" : "Статичный Динамит",
@@ -79,7 +79,7 @@
 	"block.luckytntmod.ore_tnt" : "Рудный Динамит",
 	"block.luckytntmod.redstone_tnt" : "Редстоуновый Динамит",
 	"block.luckytntmod.random_tnt" : "Случайный Динамит",
-        "block.luckytntmod.turret_tnt" : "Динамит Турель",
+    "block.luckytntmod.turret_tnt" : "Динамит Турель",
 	"block.luckytntmod.pulse_tnt" : "Пульсирующий Динамит",
 	"block.luckytntmod.dividing_tnt" : "Делящийся Динамит",
 	"block.luckytntmod.picky_tnt" : "Ломающий Динамит",
@@ -341,13 +341,17 @@
 	"item.luckytntmod.death_ray_ray" : "Луч Луч Смерти",
 	"item.luckytntmod.vacuum_cleaner" : "Пылесос",
        
-        "block.floating_island.description" : "\u00A77\u00A7oИзменяйте высоту острова в конфиг файле! На сервере также нужно будет изменить конфиг сервера!",	
-	"block.smoke_tnt.description" : "\u00A77\u00A7oИзменяйте цвет дыма правым кликом, используя красный, зеленый, синий, белый или черный краситель!",
+    "item.floating_island.info" : "\u00A77\u00A7oИзменяйте высоту острова в конфиг файле! На сервере также нужно будет изменить конфиг сервера!",	
+	"item.smoke_tnt.info" : "\u00A77\u00A7oИзменяйте цвет дыма правым кликом, используя красный, зеленый, синий, белый или черный краситель!",
    	"item.gotthard_tunnel.info": "\u00A77\u00A7oКликните правой кнопкой мыши с помощью посоха настраивания, чтобы сгенерировать дорогу!",
  	"item.configuration_wand.info": "\u00A77\u00A7oКликните правой кнопкой мыши этим посохом по особому динамиты, чтобы изменить их настройку!",
 	"item.antimatter.info": "\u00A77\u00A7oМожет быть создана, если урановая руда была уничтожена с помощью Луча Луча Смерти!",
 	"item.obsidian_rail.info" : "\u00A77\u00A7oОбсидиановые рельсы имеют большое сопротивление ко взрывам. Вагонетки, взоравнные на них, не будут наносить урон блокам!",
 	"item.vacuum_cleaner.info" : "\u00A77\u00A7oИспользуй пылесос, чтобы избавиться от этих надоедливых токсичных облаков!",
+	"item.entity_firework.info" : "\u00A77\u00A7oБлижайшая сущность, не являющаяся игроком, была выбрана для фейерверка!",
+ 	"item.item_firework.info" : "\u00A77\u00A7oКликните ПКМ предметом по динамиту, чтобы использовать его в фейерверке!",
+ 	"item.custom_tnt.info" : "\u00A77\u00A7oИзменяйте эффекты этого динамита в конфиг файле! На сервере также нужно изменить конфиг сервера!",
+ 	"item.custom_firework.info" : "\u00A77\u00A7oБлок под этим динамит будет выбран для фейерверка!",
 	
 	"item.grande_finale.info": "\u00A77\u00A7o*Динамит Сообщества* Спасибо за 100.000 загрузок!",
 	
