--- a/src/main/resources/assets/luckytntmod/lang/ru_ru.json
+++ b/src/main/resources/assets/luckytntmod/lang/ru_ru.json
@@ -21,8 +21,8 @@
 	"block.luckytntmod.lightning_tnt" : "Молниевый Динамит",
 	"block.luckytntmod.cubic_tnt" : "Кубический Динамит",
 	"block.luckytntmod.floating_tnt" : "Парящий Динамит",
-	"block.luckytntmod.tnt_firework" : "Феерверк Из Динамита",
-	"block.luckytntmod.sand_firework" : "Фереверк Из Песка",
+	"block.luckytntmod.tnt_firework" : "Фейерверк Из Динамита",
+	"block.luckytntmod.sand_firework" : "Фейерверк Из Песка",
 	"block.luckytntmod.arrow_tnt" : "Динамит Со Стрелами",
 	"block.luckytntmod.timer_tnt" : "Динамит С Таймером",
 	"block.luckytntmod.flat_tnt" : "Плоский Динамит",
@@ -45,13 +45,13 @@
 	"block.luckytntmod.village_defense" : "Защита Деревни",
 	"block.luckytntmod.zombie_apocalypse" : "Зомби Апокалипсис",
 	"block.luckytntmod.shatterproof_tnt" : "Пуленепробиваемый Динамит",
-	"block.luckytntmod.gravel_firework" : "Феерверк С Гравием",
+	"block.luckytntmod.gravel_firework" : "Фейерверк С Гравием",
 	"block.luckytntmod.lava_ocean_tnt" : "Динамит С Океаном Лавы",
 	"block.luckytntmod.attacking_tnt" : "Атакующий Динамит",
 	"block.luckytntmod.walking_tnt" : "Ходячий Динамит",
 	"block.luckytntmod.wool_tnt" : "Шерстяной Динамит",
 	"block.luckytntmod.say_goodbye" : "Скажи Прощай",
-    "block.luckytntmod.angry_miners" : "Злые Шахтеры",
+        "block.luckytntmod.angry_miners" : "Злые Шахтеры",
 	"block.luckytntmod.withering_tnt" : "Иссушающий Динамит",
 	"block.luckytntmod.nuclear_waste_tnt" : "Динамит С Ядерными Отходами",
 	"block.luckytntmod.static_tnt" : "Статичный Динамит",
@@ -66,7 +66,7 @@
 	"block.luckytntmod.bouncing_tnt" : "Отскакивающий Динамит",
 	"block.luckytntmod.roulette_tnt" : "Динамит-Рулетка",
 	"block.luckytntmod.sensor_tnt" : "Динамит-Сенсор",
-	"block.luckytntmod.rainbow_firework" : "Радужный Феерверк",
+	"block.luckytntmod.rainbow_firework" : "Радужный Фейерверк",
 	"block.luckytntmod.xray_tnt" : "XRay Динамит",
 	"block.luckytntmod.farming_tnt" : "Фермерский Динамит",
 	"block.luckytntmod.phantom_tnt" : "Фантомный Динамит",
@@ -79,7 +79,7 @@
 	"block.luckytntmod.ore_tnt" : "Рудный Динамит",
 	"block.luckytntmod.redstone_tnt" : "Редстоуновый Динамит",
 	"block.luckytntmod.random_tnt" : "Случайный Динамит",
-    "block.luckytntmod.turret_tnt" : "Динамит Турель",
+        "block.luckytntmod.turret_tnt" : "Динамит Турель",
 	"block.luckytntmod.pulse_tnt" : "Пульсирующий Динамит",
 	"block.luckytntmod.dividing_tnt" : "Делящийся Динамит",
 	"block.luckytntmod.picky_tnt" : "Ломающий Динамит",
@@ -119,16 +119,16 @@
 	"block.luckytntmod.russian_roulette" : "Русская Рулетка",
 	"block.luckytntmod.knockback_tnt" : "Отталкивающий Динамит",
 	"block.luckytntmod.midas_tnt" : "Динамит Мидаса",
-	"block.luckytntmod.new_years_firework" : "Новогодний Феерверк",
+	"block.luckytntmod.new_years_firework" : "Новогодний Фейерверк",
 	"block.luckytntmod.pulsar_tnt" : "Динамит-Пульсар",
 	"block.luckytntmod.lightning_storm" : "Грозовой Динамит",
 	"block.luckytntmod.silk_touch_tnt" : "Динамит С Шелковым Касанием",
-	"block.luckytntmod.item_firework" : "Феерверк Из Предметов",
+	"block.luckytntmod.item_firework" : "Фейерверк Из Предметов",
 	"block.luckytntmod.animal_kingdom" : "Королевство Животных",
 	"block.luckytntmod.giant_tnt" : "Гигантский Дианмит",
 	"block.luckytntmod.mimic_tnt" : "Динамит Мимик",
 	"block.luckytntmod.reversed_tnt" : "Реверсивный Динамит",
-	"block.luckytntmod.entity_firework" : "Феервер Из Сущностей",
+	"block.luckytntmod.entity_firework" : "Фейерверк Из Сущностей",
 	"block.luckytntmod.custom_tnt" : "Настраиваемый Динамит",
 	"block.luckytntmod.reset_tnt" : "Сбрасывающий Динамит",
 	"block.luckytntmod.vicious_tnt" : "Жестокий Динамит",
@@ -155,7 +155,7 @@
 	"block.luckytntmod.continental_drift" : "Континетальный Дрейф",
 	"block.luckytntmod.lucky_god" : "Удачный Бог",
 	"block.luckytntmod.supernova" : "Сверхновая",
-	"block.luckytntmod.city_firework" : "Городской Феерверк",
+	"block.luckytntmod.city_firework" : "Городской Фейерверк",
 	"block.luckytntmod.meteor_storm" : "Метеоритный Шторм",
 	"block.luckytntmod.chunk_tnt" : "Динамит-Чанк",
 	"block.luckytntmod.compressed_tnt" : "Сжатый Динамит",
@@ -170,7 +170,7 @@
 	"block.luckytntmod.jumping_tnt" : "Прыгающий Динамит",
 	"block.luckytntmod.wasteland_tnt" : "Динамит-Пустошь",
 	"block.luckytntmod.tnt_x10000" : "Динамит x10000",
-	"block.luckytntmod.custom_firework" : "Настраиваемый Дианмит",
+	"block.luckytntmod.custom_firework" : "Настраиваемый Динамит",
 	"block.luckytntmod.atlantis" : "Атлантида",
 	"block.luckytntmod.solar_eruption" : "Солнечная Вспышка",
 	"block.luckytntmod.vredefort" : "Вредефорт",
@@ -209,7 +209,7 @@
 	"item.luckytntmod.dynamite_x500" : "Динамитная Шашка x500",
 	"item.luckytntmod.fire_dynamite" : "Огненная Динамитная Шашка",
 	"item.luckytntmod.snow_dynamite" : "Снежная Динамитная Шашка",
-	"item.luckytntmod.dynamite_firework" : "Феерверк Из Динамитных Шашек",
+	"item.luckytntmod.dynamite_firework" : "Фейерверк Из Динамитных Шашек",
 	"item.luckytntmod.nuclear_dynamite" : "Ядерная Динамитная Шашка",
 	"item.luckytntmod.freeze_dynamite" : "Морозящая Динамитная Шашка",
 	"item.luckytntmod.floating_dynamite" : "Парящая Динамитная Шашка",
@@ -341,17 +341,17 @@
 	"item.luckytntmod.death_ray_ray" : "Луч Луч Смерти",
 	"item.luckytntmod.vacuum_cleaner" : "Пылесос",
        
-    "item.floating_island.info" : "\u00A77\u00A7oИзменяйте высоту острова в конфиг файле! На сервере также нужно будет изменить конфиг сервера!",	
+        "item.floating_island.info" : "\u00A77\u00A7oИзменяйте высоту острова в конфиг файле! На сервере также нужно будет изменить конфиг сервера!",	
 	"item.smoke_tnt.info" : "\u00A77\u00A7oИзменяйте цвет дыма правым кликом, используя красный, зеленый, синий, белый или черный краситель!",
    	"item.gotthard_tunnel.info": "\u00A77\u00A7oКликните правой кнопкой мыши с помощью посоха настраивания, чтобы сгенерировать дорогу!",
- 	"item.configuration_wand.info": "\u00A77\u00A7oКликните правой кнопкой мыши этим посохом по особому динамиты, чтобы изменить их настройку!",
-	"item.antimatter.info": "\u00A77\u00A7oМожет быть создана, если урановая руда была уничтожена с помощью Луча Луча Смерти!",
-	"item.obsidian_rail.info" : "\u00A77\u00A7oОбсидиановые рельсы имеют большое сопротивление ко взрывам. Вагонетки, взоравнные на них, не будут наносить урон блокам!",
-	"item.vacuum_cleaner.info" : "\u00A77\u00A7oИспользуй пылесос, чтобы избавиться от этих надоедливых токсичных облаков!",
 	"item.entity_firework.info" : "\u00A77\u00A7oБлижайшая сущность, не являющаяся игроком, была выбрана для фейерверка!",
  	"item.item_firework.info" : "\u00A77\u00A7oКликните ПКМ предметом по динамиту, чтобы использовать его в фейерверке!",
  	"item.custom_tnt.info" : "\u00A77\u00A7oИзменяйте эффекты этого динамита в конфиг файле! На сервере также нужно изменить конфиг сервера!",
- 	"item.custom_firework.info" : "\u00A77\u00A7oБлок под этим динамит будет выбран для фейерверка!",
+ 	"item.custom_firework.info" : "\u00A77\u00A7oБлок под этим динамит будет выбран для фейерверка!", 	
+	"item.configuration_wand.info": "\u00A77\u00A7oКликните правой кнопкой мыши этим посохом по особому динамиты, чтобы изменить их настройку!",
+	"item.antimatter.info": "\u00A77\u00A7oМожет быть создана, если урановая руда была уничтожена с помощью Луча Луча Смерти!",
+	"item.obsidian_rail.info" : "\u00A77\u00A7oОбсидиановые рельсы имеют большое сопротивление ко взрывам. Вагонетки, взоравнные на них, не будут наносить урон блокам!",
+	"item.vacuum_cleaner.info" : "\u00A77\u00A7oИспользуй пылесос, чтобы избавиться от этих надоедливых токсичных облаков!",
 	
 	"item.grande_finale.info": "\u00A77\u00A7o*Динамит Сообщества* Спасибо за 100.000 загрузок!",
 	
@@ -377,8 +377,8 @@
 	"entity.luckytntmod.lightning_tnt" : "Молниевый Динамит",
 	"entity.luckytntmod.cubic_tnt" : "Кубический Динамит",
 	"entity.luckytntmod.floating_tnt" : "Парящий Динамит",
-	"entity.luckytntmod.tnt_firework" : "Феерверк Из Динамита",
-	"entity.luckytntmod.sand_firework" : "Феерверк Из Песка",
+	"entity.luckytntmod.tnt_firework" : "Фейерверк Из Динамита",
+	"entity.luckytntmod.sand_firework" : "Фейерверк Из Песка",
 	"entity.luckytntmod.arrow_tnt" : "Диномит Со Стрелами",
 	"entity.luckytntmod.timer_tnt" : "Динамит С Таймером",
 	"entity.luckytntmod.flat_tnt" : "Плоский Динамит",
@@ -401,7 +401,7 @@
 	"entity.luckytntmod.village_defense" : "Защита Деревни",
 	"entity.luckytntmod.zombie_apocalypse" : "Зомби Апокалипсис",
 	"entity.luckytntmod.shatterproof_tnt" : "Пуленепробиваемый Динамит",
-	"entity.luckytntmod.gravel_firework" : "Феервер Из Гравия",
+	"entity.luckytntmod.gravel_firework" : "Фейерверк Из Гравия",
 	"entity.luckytntmod.lava_ocean_tnt" : "Динамит С Лавовым океаном",
 	"entity.luckytntmod.attacking_tnt" : "Атакующий Динамит",
 	"entity.luckytntmod.walking_tnt" : "Ходячий Динамит",
@@ -422,7 +422,7 @@
 	"entity.luckytntmod.bouncing_tnt" : "Отскакивающий Динамит",
 	"entity.luckytntmod.roulette_tnt" : "Динамит-Рулетка",
 	"entity.luckytntmod.sensor_tnt" : "Динамит-Сенсор",
-	"entity.luckytntmod.rainbow_firework" : "Радужный Феерверк",
+	"entity.luckytntmod.rainbow_firework" : "Радужный Фейерверк",
 	"entity.luckytntmod.xray_tnt" : "XRay Динамит",
 	"entity.luckytntmod.farming_tnt" : "Фермерский Динамит",
 	"entity.luckytntmod.phantom_tnt" : "Фантомный Динамит",
@@ -474,16 +474,16 @@
 	"entity.luckytntmod.russian_roulette" : "Русская Рулетка",
 	"entity.luckytntmod.knockback_tnt" : "Отталкивающий Динамит",
 	"entity.luckytntmod.midas_tnt" : "Динамит Мидаса",
-	"entity.luckytntmod.new_years_firework" : "Новогодний Феерверк",
+	"entity.luckytntmod.new_years_firework" : "Новогодний Фейерверк",
 	"entity.luckytntmod.pulsar_tnt" : "Динамит-Пульсар",
 	"entity.luckytntmod.lightning_storm" : "Грозовой Динамит",
 	"entity.luckytntmod.silk_touch_tnt" : "Динамит С Шелковым Касанием",
-	"entity.luckytntmod.item_firework" : "Феерверк Из Предметов",
+	"entity.luckytntmod.item_firework" : "Фейерверк Из Предметов",
 	"entity.luckytntmod.animal_kingdom" : "Королевство Животных",
 	"entity.luckytntmod.giant_tnt" : "Гигантский Динамит",
 	"entity.luckytntmod.mimic_tnt" : "Динамит-Мимик",
 	"entity.luckytntmod.reversed_tnt" : "Реверсивный-Динамит",
-	"entity.luckytntmod.entity_firework" : "Феерверк Из Сущностей",
+	"entity.luckytntmod.entity_firework" : "Фейерверк Из Сущностей",
 	"entity.luckytntmod.custom_tnt" : "Настраиваемый Динамит",
 	"entity.luckytntmod.reset_tnt" : "Сбрасывающий Динамит",
 	"entity.luckytntmod.vicious_tnt" : "Жестокий Динамит",
@@ -509,7 +509,7 @@
 	"entity.luckytntmod.heat_death" : "Тепловая Смерть",
 	"entity.luckytntmod.continental_drift" : "Континентальный Дрейф",
 	"entity.luckytntmod.supernova" : "Сверхновая",
-	"entity.luckytntmod.city_firework" : "Городской Феерверк",
+	"entity.luckytntmod.city_firework" : "Городской Фейерверк",
 	"entity.luckytntmod.meteor_storm" : "Метеоритный Шторм",
 	"entity.luckytntmod.chunk_tnt" : "Динамит-Чанк",
 	"entity.luckytntmod.compressed_tnt" : "Сжатый Динамит",
@@ -524,7 +524,7 @@
 	"entity.luckytntmod.jumping_tnt" : "Прыгающий Динамит",
 	"entity.luckytntmod.wasteland_tnt" : "Динамит-Пустошь",
 	"entity.luckytntmod.tnt_x10000" : "Динамит x10000",
-	"entity.luckytntmod.custom_firework" : "Настраиваемый Дианмит",
+	"entity.luckytntmod.custom_firework" : "Настраиваемый Динамит",
 	"entity.luckytntmod.atlantis" : "Атлантида",
 	"entity.luckytntmod.solar_eruption" : "Солнечная Вспышка",
 	"entity.luckytntmod.vredefort" : "Вредефорт",
