--- a/src/main/resources/assets/luckytntmod/lang/en_us.json
+++ b/src/main/resources/assets/luckytntmod/lang/en_us.json
@@ -190,6 +190,9 @@
 	"block.luckytntmod.flak_tnt" : "Flak TNT",
 	"block.luckytntmod.tnt_rain" : "TNT Rain",
 	"block.luckytntmod.lucky_doomsday" : "Lucky Doomsday",
+	"block.luckytntmod.prism_tnt" : "Prism TNT",
+	"block.luckytntmod.tetrahedron_tnt" : "Tetrahedron TNT",
+	"block.luckytntmod.illuminati_tnt" : "Illuminati TNT",
 	
 	"block.luckytntmod.nuclear_waste" : "Nuclear Waste",
 	"block.luckytntmod.uranium_ore" : "Uranium Ore",
@@ -542,6 +545,9 @@
 	"entity.luckytntmod.black_hole_tnt" : "Black Hole TNT",
 	"entity.luckytntmod.flak_tnt" : "Flak TNT",
 	"entity.luckytntmod.tnt_rain" : "TNT Rain",
+	"entity.luckytntmod.prism_tnt" : "Prism TNT",
+	"entity.luckytntmod.tetrahedron_tnt" : "Tetrahedron TNT",
+	"entity.luckytntmod.illuminati_tnt" : "Illuminati TNT",
 				
 	"entity.luckytntmod.dynamite" : "Dynamite",
 	"entity.luckytntmod.dynamite_x5" : "Dynamite x5",
